Tue Nov  8 18:54:04 1994  Gray Watson  (gray@blender.antaire.com)

	* Added dying message when malloc_die is called.  Thanks Marty.

	* Reworked the manual a ton.  Looks much better.  Added
	Quick-Start + Installation sections.

	* Lots of changes to notes files.

Thu Nov  3 17:25:29 1994  Gray Watson  (gray@blender.antaire.com)

	* Released version 3.0.3.

	* Added dmalloc.cc C++ file to distribution.

	* Default is now to build/install a libdmalloclp.a library.

Wed Oct 26 21:13:11 1994  Gray Watson  (gray@blender.antaire.com)

	* Removed the log-error tag.  Pretty worthless.  If you had
	logpath set then it should log errors.

Tue Oct 18 19:54:21 1994  Gray Watson  (gray@blender.antaire.com)

	* Fixed problem with new args clearing all old ones.

Sat Oct 15 13:55:16 1994  Gray Watson  (gray@blender.antaire.com)

	* Added dmalloc.h.2 creation to config.status file.  Thanks Dave.

	* Added a startup message with the debug flags used to logfile.

Fri Oct 14 18:40:59 1994  Gray Watson  (gray at toaster.antaire.com)

	* Fixed dumb errors with FUNC_CHECK code.  Thanks Dave.

Thu Oct 13 21:25:52 1994  Gray Watson  (gray@blender.antaire.com)

	* Added default tags: default,low,medium,high,all to dmalloc.

	* Renamed check-free to check-blank but left free for compat.

	* Made a number of changes from Dave MacKenzie.  Reworking the
	manual fixed the Makefile, RC file, argv, etc...

Wed Oct 12 13:00:48 1994  Gray Watson  (gray@blender.antaire.com)

	* Added long/short options to dmalloc and env routines.

	* Changed some dmalloc options.  -T -> -D, -L -> -t.  Yeach!

	* Added better error logging in chunk.

Tue Oct  4 13:39:40 1994  Gray Watson  (gray at toaster.antaire.com)

	* Added DG/UX code to return.h and atexit code and notes to the
	distribution.  Thanks Joerg.

Mon Sep 26 11:59:56 1994  Gray Watson  (gray@blender.antaire.com)

	* Releasing version 3.0.2.

	* Fixed stupid strtok error in dmallocrc file processing.
